feat: comments, sell banner component, pricing/location required, dashboard sorting, feature price constant
