# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import categoriesRouter from "./categories";
 import listingsRouter from "./listings";
+import commentsRouter from "./comments";
 import usersRouter from "./users";
 import paymentsRouter from "./payments";
 
@@ -10,6 +11,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use("/categories", categoriesRouter);
 router.use("/listings", listingsRouter);
+router.use("/listings/:listingId/comments", commentsRouter);
 router.use("/users", usersRouter);
 router.use("/payments", paymentsRouter);
 
